a few annoying changes
- I had to un-indent because some stuff was getting interepreted as
code blocks in markdown, and i didn’t feel like figuring out what
- I added a few if statements around page.language==r for aesthetics,
but didn’t abstract it out to all the languages

--- a/_includes/documentation_eg.html
+++ b/_includes/documentation_eg.html
@@ -1,244 +1,289 @@
 {% for page in languagelistimg %}
-  {% if page.display_as == "chart_type" %}
-    {% assign chart_type = true %}
-  {% elsif page.display_as == "advanced_charts" %}
-    {% assign advanced_charts = true %}
-  {% elsif page.display_as == "maps" %}
-    {% assign maps = true %}
-  {% elsif page.display_as == "chart_events" %}
-    {% assign chart_events = true %}    
-  {% elsif page.display_as == "3d_charts" %}
-    {% assign 3d_charts = true %}
-  {% elsif page.display_as == "multiple_axes" %}
-    {% assign multiple_axes = true %}
-  {% endif %}
+{% if page.display_as == "chart_type" %}
+{% assign chart_type = true %}
+{% elsif page.display_as == "advanced_charts" %}
+{% assign advanced_charts = true %}
+{% elsif page.display_as == "maps" %}
+{% assign maps = true %}
+{% elsif page.display_as == "chart_events" %}
+{% assign chart_events = true %}
+{% elsif page.display_as == "3d_charts" %}
+{% assign 3d_charts = true %}
+{% elsif page.display_as == "multiple_axes" %}
+{% assign multiple_axes = true %}
+{% endif %}
 {% endfor %}
 
 {% for page in languagelist %}
-  {% if page.display_as == "layout_opt" %}
-    {% assign layout_options = true %}
-  {% elsif page.display_as == "file_settings" %}
-    {% assign file_settings = true %}
-  {% elsif page.display_as == "tutorial" %}
-    {% assign tutorial = true %}
-  {% elsif page.display_as == "get_request" %}
-    {% assign get_request = true %}
-  {% endif %}
+{% if page.display_as == "layout_opt" %}
+{% assign layout_options = true %}
+{% elsif page.display_as == "file_settings" %}
+{% assign file_settings = true %}
+{% elsif page.display_as == "tutorial" %}
+{% assign tutorial = true %}
+{% elsif page.display_as == "get_request" %}
+{% assign get_request = true %}
+{% endif %}
 {% endfor %}
 
 
 {% if chart_type %}
-  <hr>
-  <h3 id="basic-charts">
-  <a class="no_underline plot-blue" href="#basic-charts">Basic Charts</a>
-    {% if page.language == "plotly_js" %}
-      <a class="button plotlyjs-download" href="http://bit.ly/1gNqEZP" target="_blank" onclick="mixpanel.track('PlotlyJS Download',{ 'Location': 'Main Page Basic Charts' });">
-	<i class="fa fa-download fa-lg"></i> Download
-      </a>
-    {% endif %}
-  </h3>
-  {% if page.language == "plotly_js" %}
-    <h5>Plotly.js Basic Charts is free for unlimited use if all links and references to Plotly remain visible and unmodified.</h5>
-  {% endif %}
-  <div class="row">
-    {% for page in languagelistimg %}
-      {% if page.display_as == "chart_type" %}
-              <a href="{% if page.permalink contains 'http' %}{{page.permalink}}{% else %}/{{page.permalink}}{% endif %}">
-                  <div class="alltutcol">
-                    <img class="thumbnail" alt="{{page.name}}" src="{{site.staticurl}}{{page.thumbnail}}" >
-                    <div class="titlecenter">
-                          <h5 class="centered"> {{page.name}} </h5>
-                    </div>
-                  </div>
-              </a>
-      {% endif %}
-    {% endfor %}
+<hr>
+<h3 id="basic-charts">
+{% if page.language != "r" %}
+<a class="no_underline plot-blue" href="#basic-charts">Basic Charts</a>
+{% endif %}
+{% if page.language == "plotly_js" %}
+<a class="button plotlyjs-download" href="http://bit.ly/1gNqEZP" target="_blank" onclick="mixpanel.track('PlotlyJS Download',{ 'Location': 'Main Page Basic Charts' });">
+<i class="fa fa-download fa-lg"></i> Download
+</a>
+{% endif %}
+</h3>
+{% if page.language == "plotly_js" %}
+<h5>Plotly.js Basic Charts is free for unlimited use if all links and references to Plotly remain visible and unmodified.</h5>
+{% endif %}
+<div class="row">
+{% for page in languagelistimg %}
+{% if page.display_as == "chart_type" %}
+<a href="{% if page.permalink contains 'http' %}{{page.permalink}}{% else %}/{{page.permalink}}{% endif %}">
+  <div class="alltutcol">
+    <img class="thumbnail" alt="{{page.name}}" src="{{site.staticurl}}{{page.thumbnail}}">
+      <div class="titlecenter">
+        <h5 class="centered"> {{page.name}} </h5>
+      </div>
   </div>
+</a>
+{% endif %}
+{% endfor %}
+</div>
 {% endif %}
 
 {% if chart_events %}
-  <hr>
-  <h5 id="chart-events">
-  <a class="no_underline plot-blue" href="#chart-events">Chart Events and Callback Functions</a>
-  </h5>
-  <p>
-    Plotly.js charts have click, hover and zoom events exposed for advanced customization.
-  </p>
-  <div class="row">
-    {% for page in languagelistimg %}
-      {% if page.display_as == "chart_events" %}
-              <a href="{% if page.permalink contains 'http' %}{{page.permalink}}{% else %}/{{page.permalink}}{% endif %}">
-                  <div class="alltutcol">
-                    <img class="thumbnail" alt="{{page.name}}" src="{{site.staticurl}}{{page.thumbnail}}" >
-                    <div class="titlecenter">
-                          <h5 class="centered"> {{page.name}} </h5>
-                    </div>
-                  </div>
-              </a>
-      {% endif %}
-    {% endfor %}
-  </div>
+<hr>
+<h5 id="chart-events">
+<a class="no_underline plot-blue" href="#chart-events">Chart Events and Callback Functions</a>
+</h5>
+<p>
+Plotly.js charts have click, hover and zoom events exposed for advanced customization.
+</p>
+<div class="row">
+{% for page in languagelistimg %}
+{% if page.display_as == "chart_events" %}
+<a href="{% if page.permalink contains 'http' %}{{page.permalink}}{% else %}/{{page.permalink}}{% endif %}">
+<div class="alltutcol">
+<img class="thumbnail" alt="{{page.name}}" src="{{site.staticurl}}{{page.thumbnail}}" >
+<div class="titlecenter">
+<h5 class="centered"> {{page.name}} </h5>
+</div>
+</div>
+</a>
+{% endif %}
+{% endfor %}
+</div>
 {% endif %}
 
 {% if advanced_charts %}
 <hr>
 <h3 id="advanced-charts">
-  <a class="no_underline plot-blue" href="#advanced-charts">Advanced Charts</a>
-  <a class="button plotlyjs-download" href="http://purchasing.plot.ly/plotlyjs">$249/developer/year</a>
+<a class="no_underline plot-blue" href="#advanced-charts">Advanced Charts</a>
+<a class="button plotlyjs-download" href="http://purchasing.plot.ly/plotlyjs">$249/developer/year</a>
 </h3>
 {% if page.language == "plotly_js" %}
-  <h5>All charts in <a href="#basic-charts">Basic Charts</a>, plus these:</h5>
-  <p>Advanced Chart developers also have right to remove Plotly links and references on charts.</p>
+<h5>All charts in <a href="#basic-charts">Basic Charts</a>, plus these:</h5>
+<p>Advanced Chart developers also have right to remove Plotly links and references on charts.</p>
 {% endif %}
-  <div class="row">
-    {% for page in languagelistimg %}
-      {% if page.display_as == "advanced_charts" %}
-              <a href="/{{page.permalink}}">
-                  <div class="alltutcol">
-                    <img class="thumbnail" alt="{{page.name}}" src="{{site.staticurl}}{{page.thumbnail}}" >
-                    <div class="titlecenter">
-                          <h5 class="centered"> {{page.name}} </h5>
-                    </div>
-                  </div>
-              </a>
-      {% endif %}
-    {% endfor %}
-  </div>
+<div class="row">
+{% for page in languagelistimg %}
+{% if page.display_as == "advanced_charts" %}
+<a href="/{{page.permalink}}">
+<div class="alltutcol">
+<img class="thumbnail" alt="{{page.name}}" src="{{site.staticurl}}{{page.thumbnail}}" >
+<div class="titlecenter">
+<h5 class="centered"> {{page.name}} </h5>
+</div>
+</div>
+</a>
+{% endif %}
+{% endfor %}
+</div>
 {% endif %}
 
 {% if maps %}
 <hr>
 <h3 id="maps"><a class="no_underline plot-blue" href="#maps">Maps</a></h3>
-  <div class="row">
-    {% for page in languagelistimg %}
-      {% if page.display_as == "maps" %}
-              <a href="/{{page.permalink}}">
-                  <div class="alltutcol">
-                    <img class="thumbnail" alt="{{page.name}}" src="{{site.staticurl}}{{page.thumbnail}}" >
-                    <div class="titlecenter">
-                          <h5 class="centered"> {{page.name}} </h5>
-                    </div>
-                  </div>
-              </a>
-      {% endif %}
-    {% endfor %}
-  </div>
+<div class="row">
+{% for page in languagelistimg %}
+{% if page.display_as == "maps" %}
+<a href="/{{page.permalink}}">
+<div class="alltutcol">
+<img class="thumbnail" alt="{{page.name}}" src="{{site.staticurl}}{{page.thumbnail}}" >
+<div class="titlecenter">
+<h5 class="centered"> {{page.name}} </h5>
+</div>
+</div>
+</a>
+{% endif %}
+{% endfor %}
+</div>
 {% endif %}
 
 {% if 3d_charts %}
 <hr>
 <h3 id="3d-charts">
-  <a class="no_underline plot-blue" href="#3d-charts">3d Charts</a>
-  {% if page.language == "plotly_js" %}
-    <a class="button plotlyjs-download" href="http://purchasing.plot.ly/plotlyjs">$995/developer/year</a>
-  {% endif %}
+<a class="no_underline plot-blue" href="#3d-charts">3d Charts</a>
+{% if page.language == "plotly_js" %}
+<a class="button plotlyjs-download" href="http://purchasing.plot.ly/plotlyjs">$995/developer/year</a>
+{% endif %}
 </h3>
 {% if page.language == "plotly_js" %}
-  <h5>All charts in Basic and Advanced, plus these:</h5>
+<h5>All charts in Basic and Advanced, plus these:</h5>
 {% endif %}
-  <div class="row">
-    {% for page in languagelistimg %}
-      {% if page.display_as == "3d_charts" %}
-              <a href="/{{page.permalink}}">
-                  <div class="alltutcol">
-                    <img class="thumbnail" alt="{{page.name}}" src="{{site.staticurl}}{{page.thumbnail}}" >
-                    <div class="titlecenter">
-                          <h5 class="centered"> {{page.name}} </h5>
-                    </div>
-                  </div>
-              </a>
-      {% endif %}
-    {% endfor %}
-  </div>
+<div class="row">
+{% for page in languagelistimg %}
+{% if page.display_as == "3d_charts" %}
+<a href="/{{page.permalink}}">
+<div class="alltutcol">
+<img class="thumbnail" alt="{{page.name}}" src="{{site.staticurl}}{{page.thumbnail}}" >
+<div class="titlecenter">
+<h5 class="centered"> {{page.name}} </h5>
+</div>
+</div>
+</a>
+{% endif %}
+{% endfor %}
+</div>
 {% endif %}
 
 {% if multiple_axes %}
-  <hr>
-  <h3 id="multiple-axes-subplots-and-insets"><a class="no_underline plot-blue" href="#multiple-axes-subplots-and-insets">Multiple Axes, Subplots, and Insets</a></h3>
-    <div class="row">
-      {% for page in languagelistimg %}
-        {% if page.display_as == "multiple_axes" %}
-            <a href="/{{page.permalink}}">
-              <div class="alltutcol">
-                <img class="thumbnail" alt="{{page.name}}" src="{{site.staticurl}}{{page.thumbnail}}" >
-                <div class="titlecenter">
-                      <h5 class="centered"> {{page.name}} </h5>
-                </div>
-              </div>
-            </a>
-            <div class="{% cycle 'group 2': '', '', 'three-column-clear', '', 'five-column-clear' %}"></div>
-        {% endif %}
-      {% endfor %}
-    </div>
+<hr>
+<h3 id="multiple-axes-subplots-and-insets"><a class="no_underline plot-blue" href="#multiple-axes-subplots-and-insets">Multiple Axes, Subplots, and Insets</a></h3>
+<div class="row">
+{% for page in languagelistimg %}
+{% if page.display_as == "multiple_axes" %}
+<a href="/{{page.permalink}}">
+<div class="alltutcol">
+<img class="thumbnail" alt="{{page.name}}" src="{{site.staticurl}}{{page.thumbnail}}" >
+<div class="titlecenter">
+<h5 class="centered"> {{page.name}} </h5>
+</div>
+</div>
+</a>
+<div class="{% cycle 'group 2': '', '', 'three-column-clear', '', 'five-column-clear' %}"></div>
+{% endif %}
+{% endfor %}
+</div>
 {% endif %}
 
 {% if page.language == "matlab" or page.language == "python" %}
-  <hr>
-  <h3 id="streaming"><a class="no_underline plot-blue" href="#streaming">Streaming</a></h3>
-    <div class="row">
-      {% if page.language == "matlab" %}<a href="/matlab/streaming-tutorial/">{% elsif page.language == "python"%}<a href="/python/streaming-tutorial/">{% endif %}
-        <div class="alltutcol">
-          <img class="thumbnail" alt="Streaming" src="{{site.staticurl}}/images/streaming.gif" >
-          <div class="titlecenter">
-                <h5 class="centered"> Real-Time Streaming </h5>
-          </div>
-        </div>
-      </a>
-  </div>
+<hr>
+<h3 id="streaming"><a class="no_underline plot-blue" href="#streaming">Streaming</a></h3>
+<div class="row">
+{% if page.language == "matlab" %}<a href="/matlab/streaming-tutorial/">{% elsif page.language == "python"%}<a href="/python/streaming-tutorial/">{% endif %}
+<div class="alltutcol">
+<img class="thumbnail" alt="Streaming" src="{{site.staticurl}}/images/streaming.gif" >
+<div class="titlecenter">
+<h5 class="centered"> Real-Time Streaming </h5>
+</div>
+</div>
+</a>
+</div>
 {% endif %}
 
+{% if page.language == "r" %}
+<hr>
+
+<div class="row">
+
+<div class="four columns">
+<ul class="no-list-style">
+{% for page in languagelist %}
+{% if page.display_as == "layout_opt" %}
+<li><a class="no-list-style" href="/{{page.permalink}}">{{page.name}}</a></li>
+{% endif %}
+{% endfor %}
+</ul>
+</div>
+
+<div class="four columns">
+<ul class="no-list-style">
+{% for page in languagelist %}
+{% if page.display_as == "file_settings" %}
+<li><a class="no-list-style" href="/{{page.permalink}}">{{page.name}}</a></li>
+{% endif %}
+{% endfor %}
+</ul>
+</div>
+
+
+<div class="four columns">
+<ul class="no-list-style">
+{% for page in languagelist %}
+{% if page.display_as == "get_request" %}
+<li><a class="no-list-style" href="/{{page.permalink}}">{{page.name}}</a></li>
+{% endif %}
+{% endfor %}
+</ul>
+</div>
+
+</div>
+
+
+{% else %}
+
 {% if layout_options %}
-  <hr>
-  <h3 id="layout-options"><a class="no_underline plot-blue" href="#layout-options">Layout Options</a></h3>
-    <div class="row">
-      <ul class="no-list-style">
-      {% for page in languagelist %}
-        {% if page.display_as == "layout_opt" %}
-        <li><a class="no-list-style" href="/{{page.permalink}}">{{page.name}}</a></li>
-        {% endif %}
-      {% endfor %}
-      </ul>
-    </div>
+<hr>
+<h3 id="layout-options"><a class="no_underline plot-blue" href="#layout-options">Layout Options</a></h3>
+<div class="row">
+<ul class="no-list-style">
+{% for page in languagelist %}
+{% if page.display_as == "layout_opt" %}
+<li><a class="no-list-style" href="/{{page.permalink}}">{{page.name}}</a></li>
+{% endif %}
+{% endfor %}
+</ul>
+</div>
 {% endif %}
 
 {% if file_settings %}
-  <hr>
-  <h3 id="file-settings"><a class="no_underline plot-blue" href="#file-settings">File Settings</a></h3>
-    <div class="row">
-      <ul class="no-list-style">
-      {% for page in languagelist %}
-        {% if page.display_as == "file_settings" %}
-        <li><a class="no-list-style" href="/{{page.permalink}}">{{page.name}}</a></li>
-        {% endif %}
-      {% endfor %}
-      </ul>
-    </div>
+<hr>
+<h3 id="file-settings"><a class="no_underline plot-blue" href="#file-settings">File Settings</a></h3>
+<div class="row">
+<ul class="no-list-style">
+{% for page in languagelist %}
+{% if page.display_as == "file_settings" %}
+<li><a class="no-list-style" href="/{{page.permalink}}">{{page.name}}</a></li>
+{% endif %}
+{% endfor %}
+</ul>
+</div>
 {% endif %}
 
 {% if tutorial %}
-  <hr>
-  <h3 id="tutorial"><a class="no_underline plot-blue" href="#tutorial">Tutorial</a></h3>
-    <div class="row">
-      <ul class="no-list-style">
-      {% for page in languagelist %}
-        {% if page.display_as == "tutorial" %}
-        <li><a class="no-list-style" href="/{{page.permalink}}">{{page.name}}</a></li>
-        {% endif %}
-      {% endfor %}
-      </ul>
-    </div>
+<hr>
+<h3 id="tutorial"><a class="no_underline plot-blue" href="#tutorial">Tutorial</a></h3>
+<div class="row">
+<ul class="no-list-style">
+{% for page in languagelist %}
+{% if page.display_as == "tutorial" %}
+<li><a class="no-list-style" href="/{{page.permalink}}">{{page.name}}</a></li>
+{% endif %}
+{% endfor %}
+</ul>
+</div>
 {% endif %}
 
 {% if get_request %}
-  <hr>
-  <h3 id="get-requests-static-image-export"><a class="no_underline plot-blue" href="#get-requests-static-image-export">Get Requests, Static Image Export, and Interactive Embedding</a></h3>
-    <div class="row">
-      <ul class="no-list-style">
-        {% for page in languagelist %}
-          {% if page.display_as == "get_request" %}
-            <li><a class="no-list-style" href="/{{page.permalink}}">{{page.name}}</a></li>
-          {% endif %}
-        {% endfor %}
-      </ul>
-    </div>
+<hr>
+<h3 id="get-requests-static-image-export"><a class="no_underline plot-blue" href="#get-requests-static-image-export">Get Requests, Static Image Export, and Interactive Embedding</a></h3>
+<div class="row">
+<ul class="no-list-style">
+{% for page in languagelist %}
+{% if page.display_as == "get_request" %}
+<li><a class="no-list-style" href="/{{page.permalink}}">{{page.name}}</a></li>
 {% endif %}
+{% endfor %}
+</ul>
+</div>
+{% endif %}
+{% endif %}
+
