--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -5,17 +5,17 @@
 	<div class="allcontent">
 		{% include header.html %}
 		{% include navigation-bar.html %}
-		
+
 		<div class="sectionseparator_bg">
 			<div class="bigcontainer">
 				{% if page.language == "matlab" or page.language == "python" or page.language == "matplotlib" %}
-				<div style="text-align: center;position: relative;top: -210px;">					
+				<div style="text-align: center;position: relative;top: -210px;">
   					<h2 class="centered" style="color: white;margin-bottom: 20px;">offline plotly is here.</h2>
 					<h5 style="color: white;">download for {% if page.language == "matlab" %}MATLAB{% elsif page.language == "python" %}IPython notebook{% endif %} for $999/year</h5>
 					<a class="button" href="http://purchasing.plot.ly/{% if page.language == "matlab" %}plotly-offline-matlab{% elsif page.language == "python" %}plotly-offline-ipython{% endif %}" target="_blank" style="text-decoration: none;font-size: 14px;display: inline-block;padding: 12px 24px;">DOWNLOAD</a>
 				</div>
 				{% elsif page.language == "plotly_js" %}
-				<div style="text-align: center;position: relative;top: -300px;">					
+				<div style="text-align: center;position: relative;top: -300px;">
   					<h1 class="centered" style="color: white;margin-bottom: 20px;">plotly.js</h1>
 					<h5 style="color: white;">the premier charting library for the web</h5>
 					<a class="button plotlyjs-download" href="http://bit.ly/1gNqEZP" target="_blank" onclick='mixpanel.track("PlotlyJS Download",{ "Location": "Banner" });'>
@@ -24,18 +24,19 @@
 					<p class="centered version-number">version 20150720a_basic</p>
 				</div>
 				{% endif %}
-				
+
+				{% if page.language != "r" %}
 				<h1 class="centered" {% if page.language == "plotly_js" %}style="margin-top:-200px;"{% endif %}>
 					{{page.name}} in {% if page.language == "plotly_js" %}plotly.js{% elsif page.language == "ggplot2" %}ggplot2{% elsif page.language == "matlab" %}MATLAB{% elsif page.language == "matplotlib" %}matplotlib{% else %}{{page.language | capitalize}}{% endif %}
 				</h1>
 				{% include lang-navigation.html %}
-				
+				{% endif %}
 				<div class="row">
-				
-				
-		
+
+
+
 				{{ content }}
-				
+
 				</div>
 			</div>
 		</div>
