--- a/_includes/documentation_eg.html
+++ b/_includes/documentation_eg.html
@@ -59,27 +59,29 @@
 {% endif %}
 
 {% if chart_events %}
-<hr>
-<h5 id="chart-events">
-<a class="no_underline plot-blue" href="#chart-events">Chart Events and Callback Functions</a>
-</h5>
-<p>
-Plotly.js charts have click, hover and zoom events exposed for advanced customization.
-</p>
-<div class="row">
-{% for page in languagelistimg %}
-{% if page.display_as == "chart_events" %}
-<a href="{% if page.permalink contains 'http' %}{{page.permalink}}{% else %}/{{page.permalink}}{% endif %}">
-<div class="alltutcol">
-<img class="thumbnail" alt="{{page.name}}" src="{{site.staticurl}}{{page.thumbnail}}" >
-<div class="titlecenter">
-<h5 class="centered"> {{page.name}} </h5>
-</div>
-</div>
-</a>
-{% endif %}
-{% endfor %}
-</div>
+	{% if page.language == "plotly_js" %}
+		<hr>
+		<h3 id="chart-events">
+			<a class="no_underline plot-blue" href="#chart-events">Add Custom Controls with JavaScript</a>
+		</h3>
+		<p>
+			All Plotly charts have click, hover and zoom events exposed to add custom controls with Plotly's JavaScript <a href="https://github.com/plotly/postMessage-API">postMessage API</a>.
+		</p>
+		<div class="row">
+		{% for page in languagelistimg %}
+			{% if page.display_as == "chart_events" %}
+				<a href="{% if page.permalink contains 'http' %}{{page.permalink}}{% else %}/{{page.permalink}}{% endif %}">
+					<div class="alltutcol">
+						<img class="thumbnail" alt="{{page.name}}" src="{{site.staticurl}}{{page.thumbnail}}" >
+						<div class="titlecenter">
+							<h5 class="centered"> {{page.name}} </h5>
+						</div>
+					</div>
+				</a>
+			{% endif %}
+		{% endfor %}
+		</div>
+	{% endif %}
 {% endif %}
 
 {% if advanced_charts %}
@@ -187,6 +189,32 @@ Plotly.js charts have click, hover and zoom events exposed for advanced customiz
 </div>
 </a>
 </div>
+{% endif %}
+
+{% if chart_events %}
+	{% if page.language != "plotly_js" %}
+	<hr>
+	<h3 id="chart-events">
+		<a class="no_underline plot-blue" href="#chart-events">Add Custom Controls with JavaScript</a>
+	</h3>
+	<p>
+		All Plotly charts have click, hover and zoom events exposed to add custom controls with Plotly's JavaScript <a href="https://github.com/plotly/postMessage-API">postMessage API</a>.
+	</p>
+	<div class="row">
+		{% for page in languagelistimg %}
+			{% if page.display_as == "chart_events" %}
+				<a href="{% if page.permalink contains 'http' %}{{page.permalink}}{% else %}/{{page.permalink}}{% endif %}">
+					<div class="alltutcol">
+						<img class="thumbnail" alt="{{page.name}}" src="{{site.staticurl}}{{page.thumbnail}}" >
+						<div class="titlecenter">
+							<h5 class="centered"> {{page.name}} </h5>
+						</div>
+					</div>
+				</a>
+			{% endif %}
+		{% endfor %}
+	</div>
+	{% endif %}
 {% endif %}
 
 {% if page.language == "r" %}
