--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -30,7 +30,7 @@
 					{{page.name}} in {% if page.language == "plotly_js" %}plotly.js{% elsif page.language == "ggplot2" %}ggplot2{% elsif page.language == "matlab" %}MATLAB{% elsif page.language == "matplotlib" %}matplotlib{% else %}{{page.language | capitalize}}{% endif %}
 				</h1>
 				{% if page.language == "plotly_js" %}
-					<img width="250" src="/all_static/images/browser_support.png">
+					<img width="250" src="{{ site.staticurl }}/images/browser_support.png">
 					<p style="text-align: center;">
 						<b style="color:#447adb;">plotly.js</b> runs on all SVG-compatible browsers
 					</p>
