templated dashboard pages, better home page

--- a/_includes/auto_examples.html
+++ b/_includes/auto_examples.html
@@ -1,3 +1,4 @@
+
 {% for example in examples %}
     <div class="section">
         <div class="row auto-eg-padding">
@@ -26,7 +27,11 @@
         </div>
         <div class="{% if example.arrangement contains 'horizontal' %}twelve{% else %}six{% endif %} columns">
           <div class="border">
+            {% if example.plot_url contains '.gif' or example.plot_url contains '.png' %}
+            <img src="{{ example.plot_url }}" />
+            {% else %}
             <iframe src="{{ example.plot_url }}{% if example.plot_url contains 'plot.ly' %}.embed{% endif %}" style="width: 100%; height: {% if example.height %}{{example.height}}px;{% else %}550px;{% endif %} border: none;"></iframe>
+            {% endif %}     
           </div>
         </div>
       </div>
