--- a/_layouts/user-guide.html
+++ b/_layouts/user-guide.html
@@ -18,7 +18,7 @@
 					{% if page.language == "matlab" or page.language == "python" %}
 					<div style="text-align: center;position: relative;top: -210px;">
   						<h2 class="centered" style="color: white;margin-bottom: 20px;">offline plotly is here.</h2>
-						<h5 style="color: white;">download for {% if page.language == "matlab" %}MATLAB{% elsif page.language == "python" %}IPython notebook{% endif %} for $999/year</h5>
+						<h5 style="color: white;">download for {% if page.language == "matlab" %}MATLAB{% elsif page.language == "python" %}IPython notebook{% endif %} for ${{site.offline_price}}/year</h5>
 						<a class="button" href="http://purchasing.plot.ly/{% if page.language == "matlab" %}plotly-offline-matlab{% elsif page.language == "python" %}plotly-offline-ipython{% endif %}" target="_blank" style="text-decoration: none;font-size: 14px;display: inline-block;padding: 12px 24px;">DOWNLOAD</a>
 					</div>
 					{% endif %}
