--- a/_includes/auto_examples.html
+++ b/_includes/auto_examples.html
@@ -26,11 +26,12 @@
           {% endif %}
         </div>
         <div class="{% if example.arrangement contains 'horizontal' %}twelve{% else %}six{% endif %} columns">
-          <div class="border">
+          <div class="border" style="text-align:center;">
             {% if example.plot_url contains '.gif' or example.plot_url contains '.png' %}
             <img src="{{ example.plot_url }}" />
             {% else %}
-            <iframe src="{{ example.plot_url }}{% if example.plot_url contains 'plot.ly' %}.embed{% endif %}" style="width: 100%; height: {% if example.height %}{{example.height}}px;{% else %}550px;{% endif %} border: none;"></iframe>
+            <iframe src="{{ example.plot_url }}{% if example.plot_url contains 'plot.ly' %}.embed{% endif %}" 
+              style="width: {% if example.width %}{{example.width}}px;{% else %}100%;{% endif %} height: {% if example.height %}{{example.height}}px;{% else %}550px;{% endif %} border: none;"></iframe>
             {% endif %}     
           </div>
         </div>
