--- a/_includes/documentation_eg.html
+++ b/_includes/documentation_eg.html
@@ -29,7 +29,7 @@
 
 {% if chart_type %}
 <hr>
-<h3 id="basic-charts">
+<h4 id="basic-charts">
 {% if page.language != "r" %}
 <a class="no_underline plot-blue" href="#basic-charts">Basic Charts</a>
 {% endif %}
@@ -38,7 +38,7 @@
 <i class="fa fa-download fa-lg"></i> Download
 </a>
 {% endif %}
-</h3>
+</h4>
 {% if page.language == "plotly_js" %}
 <h5>Plotly.js Basic Charts is free for unlimited use if all links and references to Plotly remain visible and unmodified.</h5>
 {% endif %}
@@ -61,9 +61,9 @@
 {% if chart_events %}
 	{% if page.language == "plotly_js" %}
 		<hr>
-		<h3 id="chart-events">
+		<h4 id="chart-events">
 			<a class="no_underline plot-blue" href="#chart-events">Add Custom Controls with JavaScript</a>
-		</h3>
+		</h4>
 		<p>
 			All Plotly charts have click, hover and zoom events exposed to add custom controls with Plotly's JavaScript <a href="https://github.com/plotly/postMessage-API">postMessage API</a>.
 		</p>
@@ -86,10 +86,10 @@
 
 {% if advanced_charts %}
 <hr>
-<h3 id="advanced-charts">
+<h4 id="advanced-charts">
 <a class="no_underline plot-blue" href="#advanced-charts">Advanced Charts</a>
 <a class="button plotlyjs-download" href="http://purchasing.plot.ly/plotlyjs">$249/developer/year</a>
-</h3>
+</h4>
 {% if page.language == "plotly_js" %}
 <h5>All charts in <a href="#basic-charts">Basic Charts</a>, plus these:</h5>
 <p>Advanced Chart developers also have right to remove Plotly links and references on charts.</p>
@@ -112,7 +112,7 @@
 
 {% if maps %}
 <hr>
-<h3 id="maps"><a class="no_underline plot-blue" href="#maps">Maps</a></h3>
+<h4 id="maps"><a class="no_underline plot-blue" href="#maps">Maps</a></h4>
 <div class="row">
 {% for page in languagelistimg %}
 {% if page.display_as == "maps" %}
@@ -131,12 +131,12 @@
 
 {% if 3d_charts %}
 <hr>
-<h3 id="3d-charts">
+<h4 id="3d-charts">
 <a class="no_underline plot-blue" href="#3d-charts">3d Charts</a>
 {% if page.language == "plotly_js" %}
 <a class="button plotlyjs-download" href="http://purchasing.plot.ly/plotlyjs">$995/developer/year</a>
 {% endif %}
-</h3>
+</h4>
 {% if page.language == "plotly_js" %}
 <h5>All charts in Basic and Advanced, plus these:</h5>
 {% endif %}
@@ -158,7 +158,7 @@
 
 {% if multiple_axes %}
 <hr>
-<h3 id="multiple-axes-subplots-and-insets"><a class="no_underline plot-blue" href="#multiple-axes-subplots-and-insets">Multiple Axes, Subplots, and Insets</a></h3>
+<h4 id="multiple-axes-subplots-and-insets"><a class="no_underline plot-blue" href="#multiple-axes-subplots-and-insets">Multiple Axes, Subplots, and Insets</a></h4>
 <div class="row">
 {% for page in languagelistimg %}
 {% if page.display_as == "multiple_axes" %}
@@ -178,7 +178,7 @@
 
 {% if page.language == "matlab" or page.language == "python" %}
 <hr>
-<h3 id="streaming"><a class="no_underline plot-blue" href="#streaming">Streaming</a></h3>
+<h4 id="streaming"><a class="no_underline plot-blue" href="#streaming">Streaming</a></h4>
 <div class="row">
 {% if page.language == "matlab" %}<a href="/matlab/streaming-tutorial/">{% elsif page.language == "python"%}<a href="/python/streaming-tutorial/">{% endif %}
 <div class="alltutcol">
@@ -194,9 +194,9 @@
 {% if chart_events %}
 	{% if page.language != "plotly_js" %}
 	<hr>
-	<h3 id="chart-events">
+	<h4 id="chart-events">
 		<a class="no_underline plot-blue" href="#chart-events">Add Custom Controls with JavaScript</a>
-	</h3>
+	</h4>
 	<p>
 		All Plotly charts have click, hover and zoom events exposed to add custom controls with Plotly's JavaScript <a href="https://github.com/plotly/postMessage-API">postMessage API</a>.
 	</p>
@@ -254,63 +254,81 @@
 </div>
 
 </div>
-
-
 {% else %}
 
 {% if layout_options %}
 <hr>
-<h3 id="layout-options"><a class="no_underline plot-blue" href="#layout-options">Layout Options</a></h3>
+<h4 id="layout-options"><a class="no_underline plot-blue" href="#layout-options">Layout Options</a></h4>
 <div class="row">
-<ul class="no-list-style">
+<div class="six columns">
+<ul>
+{% assign counter=0 %}
 {% for page in languagelist %}
 {% if page.display_as == "layout_opt" %}
-<li><a class="no-list-style" href="/{{page.permalink}}">{{page.name}}</a></li>
+	{% if counter > 3 %}</ul></div><div class="six columns"><ul>{% endif %}
+	<li><a href="/{{page.permalink}}">{{page.name}}</a></li>
+	{% assign counter=counter | plus:1 %}  
 {% endif %}
 {% endfor %}
 </ul>
+</div>
 </div>
 {% endif %}
 
 {% if file_settings %}
 <hr>
-<h3 id="file-settings"><a class="no_underline plot-blue" href="#file-settings">File Settings</a></h3>
+<h4 id="file-settings"><a class="no_underline plot-blue" href="#file-settings">File Settings</a></h4>
 <div class="row">
-<ul class="no-list-style">
+<div class="six columns">
+<ul>
+{% assign counter=0 %}
 {% for page in languagelist %}
 {% if page.display_as == "file_settings" %}
-<li><a class="no-list-style" href="/{{page.permalink}}">{{page.name}}</a></li>
+	{% if counter > 3 %}</ul></div><div class="six columns"><ul>{% endif %}
+	<li><a href="/{{page.permalink}}">{{page.name}}</a></li>
+	{% assign counter=counter | plus:1 %}  
 {% endif %}
 {% endfor %}
 </ul>
+</div>
 </div>
 {% endif %}
 
 {% if tutorial %}
 <hr>
-<h3 id="tutorial"><a class="no_underline plot-blue" href="#tutorial">Tutorial</a></h3>
+<h4 id="tutorial"><a class="no_underline plot-blue" href="#tutorial">Tutorial</a></h4>
 <div class="row">
-<ul class="no-list-style">
+<div class="six columns">
+<ul>
+{% assign counter=0 %}
 {% for page in languagelist %}
 {% if page.display_as == "tutorial" %}
-<li><a class="no-list-style" href="/{{page.permalink}}">{{page.name}}</a></li>
+	{% if counter > 3 %}</ul></div><div class="six columns"><ul>{% endif %}
+	<li><a href="/{{page.permalink}}">{{page.name}}</a></li>
+	{% assign counter=counter | plus:1 %} 
 {% endif %}
 {% endfor %}
 </ul>
+</div>
 </div>
 {% endif %}
 
 {% if get_request %}
 <hr>
-<h3 id="get-requests-static-image-export"><a class="no_underline plot-blue" href="#get-requests-static-image-export">Get Requests, Static Image Export, and Interactive Embedding</a></h3>
+<h4 id="static-image-export"><a class="no_underline plot-blue" href="#get-requests-static-image-export">Image Export & Retrieving Plots</a></h4>
 <div class="row">
-<ul class="no-list-style">
+<div class="six columns">
+<ul>
+{% assign counter=0 %}
 {% for page in languagelist %}
 {% if page.display_as == "get_request" %}
-<li><a class="no-list-style" href="/{{page.permalink}}">{{page.name}}</a></li>
+	{% if counter > 3 %}</ul></div><div class="six columns"><ul>{% endif %}
+	<li><a href="/{{page.permalink}}">{{page.name}}</a></li>
+	{% assign counter=counter | plus:1 %} 
 {% endif %}
 {% endfor %}
 </ul>
+</div>
 </div>
 {% endif %}
 {% endif %}
