--- a/all_static/css/api_docs.css
+++ b/all_static/css/api_docs.css
@@ -6,9 +6,9 @@
 	*/
 
 .z-depth-1{
-/*box-shadow: inset 0px 0px 1em rgba(204, 204, 204, 0.5); */
-border: 1px solid #ccc;
-background-color: #ffffff;
+	border: 0px;
+	background-color: #ffffff;
+	margin-top: 60px !important;
 }
 
 code, kbd, pre, samp {
@@ -25,11 +25,11 @@ pre, blockquote {
 
 iframe{
 	width: 100%;
-	border: 1px solid #ccc;
+	border: 0px;
 }
 
 .border{
-	border: 1px solid #ccc;
+	border: 0px;
 	background-color: #ffffff;
 }
 
