--- a/all_static/css/layout_block.css
+++ b/all_static/css/layout_block.css
@@ -114,7 +114,7 @@ PAGE-WIDE SECTION LAYOUT
       background-color: #FFFFFF;
 }
 .sectionseparator_bg{
-  background-color: #F8F8F9;
+  background-color: #FFFFFF;
 }
 .sectionseparator_white{
       background-color: #FFFFFF;
@@ -189,9 +189,8 @@ NAVIGATION BAR STYLING
 ***********************/
 .navigation-bar{
   min-width: 100%;
-  background-color: #e0e2e5;
-  height: 40px;
-  border-bottom: 1px solid #ccc;
+  height: 60px;
+  border-bottom: 1px solid #EEE;
 }
 
 /***********************
@@ -260,6 +259,7 @@ html, body {
   min-height: 100%;
   /* equal to footer height */
   margin-bottom: -274px;
+  background-color: #FFFFFF;
 }
 .allcontent:after {
   content: "";
@@ -267,4 +267,5 @@ html, body {
 }
 .plotly-footer, .allcontent:after {
   height: 274px;
+  margin-top: 100px;
 }
