--- a/all_static/css/modules.css
+++ b/all_static/css/modules.css
@@ -160,7 +160,9 @@ NAVIGATION BAR STYLING
 ***********************/
 
 .navigation-bar p, .navigation-bar a {
-    font-weight: bold;
+    font-weight: 800;
+    margin-top: 10px;
+    text-transform: uppercase;
     line-height: 40px;
     text-decoration: none;
 	display: inline;
@@ -169,11 +171,12 @@ NAVIGATION BAR STYLING
 }
 .navigation-bar a{
 	color: #447bdc;
-	}
+	margin: 0px 20px;
+}
 .navigation-bar p{
 	float: left;
 	color: #69738a;
-	}
+}
 #nav-not-active{
 	color: #69738a;
 }
@@ -204,7 +207,7 @@ ALL TUTORIALS SECTION STYLING
 }
 
 .sectionseparator_b .titlecenter{
-	background-color: #EEEEEE;
+	background-color: rgb(244, 244, 248);
 }
 
 .sectionseparator_a li, .sectionseparator_b li, .sectionseparator_a a, .sectionseparator_b a{
@@ -238,7 +241,7 @@ ALL TUTORIALS SECTION STYLING
   padding-left: 8px;
   padding-top: 0px;
   padding-bottom: 0px;
-  background-color: #ffffff;
+  background-color: rgb(244, 244, 248);
 }
 
 .titlecenter h5{
@@ -320,7 +323,6 @@ BUTTONS
     text-transform: uppercase;
     vertical-align: middle;
     white-space: nowrap;
-    box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.1);
 }
 
 .button a{
@@ -356,7 +358,6 @@ BUTTONS
     text-transform: uppercase;
     vertical-align: middle;
     white-space: nowrap;
-    box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.1);
 }
 
 .button:hover, .button.lateralmenu-item.is-active{
@@ -667,7 +668,6 @@ API SPLASH
 }
 .api-sect-padding{
 	padding-top: 40px;
-	padding-bottom: 20px;
 }
 
 /* Larger than mobile */
@@ -739,21 +739,21 @@ LANGUAGE PAGES
 TIP BOX
 **************/
 .tipbox{
-	background-color: #ced9ed;
+	text-align: center; 
 	padding: 10px;
 	margin-top: 10px;
 	margin-bottom: 10px;
-	border-radius: 5px;}
+	border-radius: 0px;}
 
 .tipbox img{
-	float: left;
+	display: inline-block;
 	padding-right: 20px;
 }
 
 .tipbox p{
-	margin-top: 20px;
-	margin-bottom: 0;
+	display: inline-block;
 	font-size: 16px;
+	vertical-align: 130%;
 }
 
 /**************
@@ -774,10 +774,10 @@ API THUMNAIL LIST
 NAVIGATION BAR STYLING
 ***********************/
 .lang_nav_button{
-	background-color: #8d97b0;
+	background-color: transparent;
     border: medium none;
-    border-radius: 2px;
-    color: #f8f8f9;
+    border-radius: 0px;
+    color: #447adb;
     cursor: pointer;
     display: inline-block;
     font-family: inherit;
@@ -788,7 +788,6 @@ NAVIGATION BAR STYLING
     padding: 5px 1em;
     text-transform: uppercase;
     white-space: nowrap;
-    box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.1);
 	vertical-align: middle;
 }
 .lang_nav_button-div{
@@ -796,8 +795,7 @@ NAVIGATION BAR STYLING
 }
 
 .lang_nav_button:hover{
-	background-color: #6a758b;
-	color: #f8f8f9;
+	background-color: whitesmoke;
 }
 .lang_nav_button{
 		font-weight: 400;
@@ -829,7 +827,9 @@ NAVIGATION BAR STYLING
 }
 
 .lang_nav_act{
-	background-color: #143060;
+	background-color: transparent;
+	border-bottom: 3px solid #447adb;
+	border-top: 3px solid #447adb;
 }
 
 
@@ -917,3 +917,12 @@ PLOTLY.JS VERSION NUMBER
 	padding: 12px 24px;
 	margin: 0px 30px;
 }
+
+/***************************
+SYNTAX HIGHLIGHTER OVERRIDES
+***************************/
+.hljs{
+	background-color: rgb(244, 244, 248) !important;
+}
+
+
