--- a/all_static/css/state.css
+++ b/all_static/css/state.css
@@ -10,6 +10,8 @@
   display: none;}
 .centered{
   text-align: center;}
+.shiftup{
+  margin-top: -150px;}
 .no_underline{
   text-decoration: none;}
 .padding_left_small{
@@ -31,7 +33,8 @@
   color: white;
 }
 .plot-blue{
-  color: #457bdc;
+  color: #444;
+  text-transform: uppercase;
 }
 .plot-blue:hover{
   color: #457bdc;
