--- a/_includes/navigation-bar.html
+++ b/_includes/navigation-bar.html
@@ -1,23 +1,9 @@
 <div class="navigation-bar">
-<p class="align-left padding_left_small"><a href="/api/"> API Libraries / </a><a href="/{% if page.permalink contains 'javascript-graphing-library' %}javascript-graphing-library{% else %}{{page.language}}{% endif %}" {% if page.layout == "langindex" %} id="nav-not-active" {% endif %} >{% if page.language == "plotly_js" %}Javascript Graphing Library{% elsif page.language == "ggplot2" %}ggplot2{% elsif page.language == "matlab" %}MATLAB{% elsif page.language == "matplotlib" %}matplotlib{% else %}{{page.language | capitalize}}{% endif %} / </a>{{page.name}}</p>
-	<div class="float-right padding_right_small">
-		<a id="forklink" href="https://github.com/plotly">Fork on GitHub</a>
-	</div>
-</div>
 
+    <p class="align-left padding_left_small"><a href="/api/">API Libraries</a><span>/</span><a href="/{% if page.permalink contains 'javascript-graphing-library' %}javascript-graphing-library{% else %}{{page.language}}{% endif %}" {% if page.layout == "langindex" %} id="nav-not-active" {% endif %} >{% if page.language == "plotly_js" %}Javascript Graphing Library{% elsif page.language == "ggplot2" %}ggplot2{% elsif page.language == "matlab" %}MATLAB{% elsif page.language == "matplotlib" %}matplotlib{% else %}{{page.language | capitalize}}{% endif %}</a><span>/</span><a href="#">{{page.name}}</a></p>
 
-{% if page.language == "matlab" or page.language == "python" or page.language == "matplotlib" %}
-<div style="
-    	background-image: url(https://plot.ly/gh-pages/documentation/static//images/banner-bar.png);
-    	height: 256px; 
-    	text-align: center;">
-	<div style="background-color: rgba(0,0,0,0.6); height: 100%; text-align: center;"></div>
+    <div class="float-right padding_right_small" style="margin-top:10px;">
+        <a id="forklink" href="https://github.com/plotly"><i class="fa fa-github-alt"></i> Fork on GitHub</a>
+    </div>
+
 </div>
-{% elsif page.language == "plotly_js" %}
-<div style="
-    	background-image: url(https://plot.ly/gh-pages/documentation/static//images/plotlyjs-background-1.png);
-    	height: 350px; 
-    	text-align: center;">
-	<div style="background-color: rgba(0,0,0,0.6); height: 100%; text-align: center;"></div>
-</div>
-{% endif %}
