--- a/all_static/css/base.css
+++ b/all_static/css/base.css
@@ -36,7 +36,7 @@ code {
 }
 
 div.highlight {
-  border: 1px solid #ccc;
+  border: 0px;
   margin-bottom: 8px;
   margin-top: 8px;
   background-color: white;
@@ -258,7 +258,7 @@ input[type="button"] {
   text-decoration: none;
   white-space: nowrap;
   background-color: transparent;
-  border-radius: 4px;
+  border-radius: 0px;
   border: 1px solid #bbb;
   cursor: pointer;
   box-sizing: border-box; }
@@ -386,7 +386,7 @@ code {
   white-space: nowrap;
   background: #FFFFFF;
   border: 0px;
-  border-radius: 4px; }
+  border-radius: 0px; }
 pre > code {
   display: block;
   padding: 1rem 1.5rem;
