unified plotlyjs download url

--- a/_includes/documentation_eg.html
+++ b/_includes/documentation_eg.html
@@ -34,7 +34,7 @@
 <a class="no_underline plot-blue" href="#basic-charts">Basic Charts</a>
 {% endif %}
 {% if page.language == "plotly_js" %}
-<a class="button plotlyjs-download" href="http://bit.ly/1gNqEZP" target="_blank" onclick="mixpanel.track('PlotlyJS Download',{ 'Location': 'Main Page Basic Charts' });">
+<a class="button plotlyjs-download" href="{{site.plotlyjs_download_url}}" target="_blank" onclick="mixpanel.track('PlotlyJS Download',{ 'Location': 'Main Page Basic Charts' });">
 <i class="fa fa-download fa-lg"></i> Download
 </a>
 {% endif %}
