add pandas language to banner

--- a/_includes/ad-text.html
+++ b/_includes/ad-text.html
@@ -5,6 +5,7 @@
 	<h5 style="color: white;">download for {% if page.language == "matlab" %}MATLAB
 	{% elsif page.language == "python" %}IPython notebook
 	{% elsif page.language == "matplotlib" %}IPython notebook
+	{% elsif page.language == "pandas" %}IPython notebook
 	{% elsif page.language == "r" %}RStudio and Shiny
 	{% elsif page.language == "ggplot2" %}RStudio and Shiny
 	{% endif %} for ${{site.offline_price}}</h5>
@@ -12,6 +13,7 @@
 	<a class="button" href="http://purchasing.plot.ly/{% if page.language == "matlab" %}plotly-offline-matlab
 	{% elsif page.language == "python" %}plotly-offline-ipython
 	{% elsif page.language == "matplotlib" %}plotly-offline-ipython
+	{% elsif page.language == "pandas" %}plotly-offline-ipython
 	{% elsif page.language == "r" %}plotly-offline-r
 	{% elsif page.language == "ggplot2" %}plotly-offline-r
 	{% endif %}" target="_blank" style="text-decoration: none;font-size: 14px;display: inline-block;padding: 12px 24px;">DOWNLOAD</a>
