--- a/all_static/css/keen-dashboards.css
+++ b/all_static/css/keen-dashboards.css
@@ -76,3 +76,10 @@ body.application hr {
   font-size: 12px;
   padding: 8px 10px 5px;
 }
+
+.dash-title{
+  font-size: 18px !important;
+  margin: 0px !important;
+  font-weight: 100 !important;
+  letter-spacing: 0.2rem !important;
+}
