--- a/_includes/ad-text.html
+++ b/_includes/ad-text.html
@@ -1,22 +1,21 @@
 {% if page.language == "matlab" or page.language == "python" or page.language == "matplotlib" or page.language == "pandas" or page.language == "r" or page.language == "ggplot2"  %}
-<div style="text-align: center;position: relative;top: -285px;">
-	<h2 class="centered" style="color: white;margin-bottom: 20px;">use plotly offline</h2>
+<div style="text-align: center;position: relative;top: -190px;">
+	<h5 style="color: #444; display: inline-block;">plotly is free for unlimited public use</h5>
 
-	<h5 style="color: white;">download for {% if page.language == "matlab" %}MATLAB
-	{% elsif page.language == "python" %}IPython notebook
-	{% elsif page.language == "matplotlib" %}IPython notebook
-	{% elsif page.language == "pandas" %}IPython notebook
-	{% elsif page.language == "r" %}RStudio and Shiny
-	{% elsif page.language == "ggplot2" %}RStudio and Shiny
-	{% endif %} for ${{site.offline_price}}</h5>
+	<a class="button" href="https://plot.ly/settings/" target="_blank" style="text-decoration: none;font-size: 14px;display: inline-block;padding: 12px 24px;">SIGN UP FOR FREE</a>
 
-	<a class="button" href="http://purchasing.plot.ly/{% if page.language == "matlab" %}plotly-offline-matlab
-	{% elsif page.language == "python" %}plotly-offline-ipython
-	{% elsif page.language == "matplotlib" %}plotly-offline-ipython
-	{% elsif page.language == "pandas" %}plotly-offline-ipython
-	{% elsif page.language == "r" %}plotly-offline-r
-	{% elsif page.language == "ggplot2" %}plotly-offline-r
-	{% endif %}" target="_blank" style="text-decoration: none;font-size: 14px;display: inline-block;padding: 12px 24px;">DOWNLOAD</a>
+	<h6 style="color: #444;" style="text-align: center;">
+		Sensitive data? Upgrade to a 
+<a href="https://plot.ly/settings/subscription">paid plan</a> or trial 
+<a href="http://purchasing.plot.ly/{% if page.language == "matlab" %}plotly-offline-matlab
+{% elsif page.language == "python" %}plotly-offline-ipython
+{% elsif page.language == "matplotlib" %}plotly-offline-ipython
+{% elsif page.language == "pandas" %}plotly-offline-ipython
+{% elsif page.language == "r" %}plotly-offline-r
+{% elsif page.language == "ggplot2" %}plotly-offline-r
+{% endif %}">plotly offline</a>	
+	</h6>
+
 </div>
 {% elsif page.language == "plotly_js" %}
 <div style="text-align: center;position: relative;top: -380px;">
