--- a/_includes/banner-image.html
+++ b/_includes/banner-image.html
@@ -3,13 +3,13 @@
     	background-image: url({{site.staticurl}}/images/plotlyjs-background-1.png);
     	height: 350px; 
     	text-align: center;">
-	<div style="background-color: rgba(0,0,0,0.6); height: 100%; text-align: center;"></div>
+	<div style="background-color: rgba(,0,0,0.6); height: 100%; text-align: center;"></div>
 </div>
 {% elsif page.language == "matlab" or page.language == "python" or page.language == "matplotlib" or page.language == "pandas" or page.language == "r" or page.language == "ggplot2" %}
 <div style="
     	background-image: url({{site.staticurl}}/images/banner-bar.png);
-    	height: 256px; 
+    	height: 150px; 
     	text-align: center;">
-	<div style="background-color: rgba(0,0,0,0.6); height: 100%; text-align: center;"></div>
+	<div style="background-color: rgba(255,255,255,0.6); height: 100%; text-align: center;"></div>
 </div>
 {% endif %}
