--- a/_includes/ad-text.html
+++ b/_includes/ad-text.html
@@ -1,10 +1,10 @@
 {% if page.language == "matlab" or page.language == "python" or page.language == "matplotlib" or page.language == "pandas" or page.language == "r" or page.language == "ggplot2"  %}
-<div style="text-align: center;position: relative;top: -190px;">
-	<h5 style="color: #444; display: inline-block;">plotly is free for unlimited public use</h5>
+<div style="text-align: center;position: relative;top: -227px;">
+	<h6 style="color: black;">plotly is free for unlimited public use</h6>
 
-	<a class="button" href="https://plot.ly/settings/" target="_blank" style="text-decoration: none;font-size: 14px;display: inline-block;padding: 12px 24px;">SIGN UP FOR FREE</a>
+	<a class="button" href="https://plot.ly/settings/" target="_blank" style="text-decoration: none;font-size: 14px;padding: 12px 24px;">SIGN UP FOR FREE</a>
 
-	<h6 style="color: #444;" style="text-align: center;">
+	<h6 style="color: black;" style="text-align: center;">
 		Sensitive data? Upgrade to a 
 <a href="https://plot.ly/settings/subscription">paid plan</a> or trial 
 <a href="http://purchasing.plot.ly/{% if page.language == "matlab" %}plotly-offline-matlab
