--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -11,7 +11,7 @@
 				{% include ad-text.html %}
 
 				{% if page.language != "r" %}
-					<h1 class="centered shiftup" {% if page.language == "plotly_js" %}style="margin-top:-200px;"{% endif %}>
+					<h1 class="centered" {% if page.language == "plotly_js" %}style="margin-top:-200px;"{% endif %}>
 						{{page.name}} in {% if page.language == "plotly_js" %}plotly.js{% elsif page.language == "ggplot2" %}ggplot2{% elsif page.language == "matlab" %}MATLAB{% elsif page.language == "matplotlib" %}matplotlib{% else %}{{page.language | capitalize}}{% endif %}
 					</h1>
 					{% include lang-navigation.html %}				
