--- a/_includes/ad-text.html
+++ b/_includes/ad-text.html
@@ -19,8 +19,8 @@
 </div>
 {% elsif page.language == "plotly_js" %}
 <div style="text-align: center;position: relative;top: -380px;">
-		<h1 class="centered" style="color: white;margin-bottom: 20px;">plotly.js</h1>
-	<h5 style="color: white;">the premier charting library for the web</h5>
+		<h1 class="centered" style="margin-bottom: 20px;">plotly.js</h1>
+	<h5>the premier charting library for the web</h5>
 	<a class="button plotlyjs-download" href="{{site.plotlyjs_download_url}}" target="_blank" onclick='mixpanel.track("PlotlyJS Download",{ "Location": "Banner" });'>
 		<i class="fa fa-download fa-lg"></i> Download
 	</a>
